ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejs
  #annotations:
  #  kubernetes.io/ingress.class: azure/application-gateway
  #  appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
        - path: /
          backend:
            service: 
              name: nodejs
              port: 
                number: 80
          pathType: Exact
